--- a/sec.html
+++ b/sec.html
@@ -8,12 +8,11 @@
 <body>
 <div id="app">
     <div>test: {{ message }} jaja {{ hi }}</div>
-    <input value="{{ message }}" type="text"/>
+    <input sec-on:input="sync" value="{{ message }}" type="text"/>
     <div sec-on:click="greet">{{ paul }}</div>
 </div>
 
 <script>
-
     var app = new Sec({
         el: '#app',
         data: {
@@ -30,10 +29,12 @@
                 if (event) {
                     alert(event.target.tagName)
                 }
+            },
+            sync: function(event){
+                this.message = event.target.value;
             }
         }
     })
-
 </script>
 </body>
 </html>
