--- a/sec.html
+++ b/sec.html
@@ -23,7 +23,7 @@
         // 在 `methods` 对象中定义方法
         methods: {
             greet: function (event) {
-                // `this` 在方法里指向当前 Vue 实例
+                // `this` 在方法里指向当前 Sec 实例
                 alert('Hello ' + this.paul + '!')
                 // `event` 是原生 DOM 事件
                 if (event) {
